--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         color: white;
         margin: 0px;
         padding: 0px;
-        background-image: url("../images/adult.jpg");
+        background-image: url("adult.jpg");
         /* background: url('../img/adult-1850925_1920.jpg');  */
     }
      .left { 
@@ -131,7 +131,7 @@
     <header class="header">
         <!-- Left box for logo -->
         <div class="left">
-     <img src="../images/people.jpg" alt="">
+     <img src="people.jpg" alt="">
       <p> ekam fitness </p>
         </div>
         <!-- Mid box for navbar -->
